SSM-20140501: Completed implementation of Near By restaurants.  User can set option in settings for distance from current location.  The Near By tab will list restaurants within that radius in order of distance.
Added usage of the Halaal and Kosher user setting.  This displays only
thos branches that are listed as Halaal or Kosher.